--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -49,6 +49,9 @@ on init
     write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
 
 on fs
+    wait /dev/block/platform/soc/${ro.boot.bootdevice}
+    symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
+
     mount_all fstab.qcom
     swapon_all fstab.qcom
     write /proc/sys/vm/page-cluster 0
