--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -474,7 +474,7 @@ service rmt_storage /system/bin/rmt_storage
     group wakelock
 
 service tftp_server /system/bin/tftp_server
-   class main
+   class core
    user root
 
 service config_bt_addr /system/bin/btnvtool -O
