--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -66,6 +66,8 @@ on post-fs
     write /proc/sys/vm/page-cluster 0
     write /proc/sys/vm/swappiness 100
 
+on post-fs
+    start qseecomd
 
 # msm specific files that need to be created on /data
 on post-fs-data
