--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -63,6 +63,9 @@ on fs
     mkdir /persist/data 0700 system system
     restorecon_recursive /persist
 
+on post-fs
+    start qseecomd
+
 # msm specific files that need to be created on /data
 on post-fs-data
     mkdir /data/tombstones 0771 system system
