--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -564,7 +564,9 @@ on property:persist.env.fastdorm.enabled=true
 service dpmd /system/bin/dpmd
     class late_start
     socket dpmd stream 660 root system
-    group system readproc
+    socket tcm stream 660 root inet
+    socket dpmwrapper stream 660 root inet
+    group system readproc inet
     
 service dpmQmiMgr /system/vendor/bin/dpmQmiMgr
     class main
