--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -207,7 +207,7 @@ on charger
 
     write /sys/module/lpm_levels/parameters/sleep_disabled 0
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
-    start hvdcp_opti
+    start vendor.hvdcp_opti
 
 on property:init.svc.recovery=running
     trigger enable-low-power
