--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -38,7 +38,7 @@ on early-init
     chmod 0755 /sys/kernel/debug
 
 on init
-    export LD_SHIM_LIBS "/system/vendor/lib64/lib-imsvt.so|libshims_ims.so:/system/bin/mm-qcamera-daemon|libshim_camera.so:/system/lib/hw/camera.msm8937.so|libcamera.shim.msm8937.so"
+    export LD_SHIM_LIBS "/system/vendor/lib64/lib-imsvt.so|libshims_ims.so:/system/bin/mm-qcamera-daemon|libshim_camera.so:/system/lib/hw/camera.msm8937.so|libcamera.shim.msm8937.so:/system/vendor/lib/libizat_core.so:libshims_get_process_name.so"
 
     # Set permissions for persist partition
     mkdir /persist 0771 root system
