--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -550,7 +550,7 @@ service qcom-sh /system/bin/sh /init.qcom.sh
 service ril-daemon2 /system/vendor/bin/hw/rild -c 2
     class main
     user radio
-    group radio cache inet misc audio log readproc wakelock diag
+    group radio cache inet misc audio log readproc wakelock
     capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
 service usb_uicc_enable /system/bin/sh /system/etc/init.qcom.uicc.sh
