--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -725,11 +725,18 @@ service imsqmidaemon /system/vendor/bin/imsqmidaemon
     class main
     user system
     socket ims_qmid stream 0660 system radio
-    group radio net_raw log diag
+    group radio log diag
     disabled
 
 on property:service.qti.ims.enabled=1
     start imsqmidaemon
+
+service imsdatadaemon /system/vendor/bin/imsdatadaemon
+    class main
+    user system
+    socket ims_datad stream 0660 system radio
+    group system wifi radio inet log diag
+    disabled
 
 on property:sys.ims.QMI_DAEMON_STATUS=1
     start imsdatadaemon
@@ -738,13 +745,13 @@ service ims_rtp_daemon /system/vendor/bin/ims_rtp_daemon
     class main
     user system
     socket ims_rtpd stream 0660 system radio
-    group radio net_raw diag inet log
+    group radio diag inet log
     disabled
 
 service imscmservice /system/vendor/bin/imscmservice
     class main
     user system
-    group radio net_raw diag log
+    group radio diag inet log
     disabled
 
 on property:sys.ims.DATA_DAEMON_STATUS=1
@@ -799,6 +806,18 @@ service per_mgr /system/vendor/bin/pm-service
     class core
     user system
     group system net_raw
+
+service per_proxy /system/bin/pm-proxy
+    class core
+    user system
+    group system
+    disabled
+
+on property:init.svc.per_mgr=running
+    start per_proxy
+
+on property:sys.shutdown.requested=*
+    stop per_proxy
 
 service hvdcp_opti /system/bin/hvdcp_opti
     class main
