--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -551,11 +551,12 @@ service qcom-sh /system/bin/sh /init.qcom.sh
     user root
     oneshot
 
-service ril-daemon2 /vendor/bin/hw/rild -c 2
+service ril-daemon2 /system/bin/rild -c 2
     class main
-    user radio
-    group radio cache inet misc audio log readproc wakelock
-    capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
+    socket rild2 stream 660 root radio
+    socket rild-debug2 stream 660 radio system
+    user root
+    group radio cache inet misc audio sdcard_r sdcard_rw qcom_diag diag log
 
 service usb_uicc_enable /system/bin/sh /system/etc/init.qcom.uicc.sh
     class late_start
