--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -553,10 +553,9 @@ service qcom-sh /system/bin/sh /init.qcom.sh
 
 service ril-daemon2 /system/bin/rild -c 2
     class main
-    socket rild2 stream 660 root radio
-    socket rild-debug2 stream 660 radio system
-    user root
-    group radio cache inet misc audio sdcard_r sdcard_rw qcom_diag diag log
+    user radio
+    group radio cache inet misc audio sdcard_r sdcard_rw diag log
+    capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
 service usb_uicc_enable /system/bin/sh /system/etc/init.qcom.uicc.sh
     class late_start
