land: Change hvdcp_opti service to system group
Drop hvdcp_opti service to system group and add wakelock group for it to
be able to access wake_lock sysfs.

Change-Id: Ic58bf5e72544fc1fd4eed6462126087d08e1e563
Signed-off-by: klozz <klozz707@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -909,7 +909,7 @@ service adsprpcd /system/vendor/bin/adsprpcd
 service hvdcp_opti /system/vendor/bin/hvdcp_opti
     class main
     user root
-    group root
+    group system wakelock
 
 service energy-awareness /system/vendor/bin/energy-awareness
     class main
