--- a/audio/audio_effects.conf
+++ b/audio/audio_effects.conf
@@ -3,7 +3,7 @@
 # code that are surrounded by "DOLBY..." are copyrighted and
 # licensed separately, as follows:
 #
-#  (C) 2012-2015 Dolby Laboratories, Inc.
+#  (C) 2012-2016 Dolby Laboratories, Inc.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -62,10 +62,10 @@ libraries {
     path /system/lib/soundfx/libdirac.so
   }
 #DOLBY_DAP
-  ds_sw {
+  dap_sw {
     path /system/vendor/lib/soundfx/libswdap.so
   }
-  ds_hw {
+  dap_hw {
     path /system/vendor/lib/soundfx/libhwdap.so
   }
 #DOLBY_END
@@ -165,17 +165,17 @@ effects {
     uuid e069d9e0-8329-11df-9168-0002a5d5c51b
   }
 #DOLBY_DAP
-  ds {
+  dap {
     library proxy
     uuid 9d4921da-8225-4f29-aefa-39537a04bcaa
 
     libsw {
-      library ds_sw
+      library dap_sw
       uuid 6ab06da4-c516-4611-8166-452799218539
     }
 
     libhw {
-      library ds_hw
+      library dap_hw
       uuid a0c30891-8246-4aef-b8ad-d53e26da0253
     }
   }
