land: Add priv-app permissions to whitelist.
Added priv-app to whitelist so as to provide priv app permissions.

CRs-Fixed: 2131551
Change-Id: I0f2446e1946cdd7cf8b1641a46818317acfaefdd
Signed-off-by: klozz <klozz707@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -519,7 +519,7 @@ on class_start:late_start
     write /data/misc/radio/db_check_done 1
 
 
-service iop /system/bin/iop
+service iop /vendor/bin/iop
     class main
     user root
     group root
