--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -744,6 +744,9 @@ service imsdatadaemon /system/vendor/bin/imsdatadaemon
 on property:sys.ims.QMI_DAEMON_STATUS=1
     start imsdatadaemon
 
+on property:vendor.ims.QMI_DAEMON_STATUS=1
+    start imsdatadaemon
+
 service ims_rtp_daemon /system/vendor/bin/ims_rtp_daemon
     class main
     user system
@@ -758,6 +761,10 @@ service imscmservice /system/vendor/bin/imscmservice
     disabled
 
 on property:sys.ims.DATA_DAEMON_STATUS=1
+    start ims_rtp_daemon
+    start imscmservice
+
+on property:vendor.ims.DATA_DAEMON_STATUS=1
     start ims_rtp_daemon
     start imscmservice
 
