--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -733,7 +733,7 @@ service thermal-engine /system/vendor/bin/thermal-engine
     socket thermal-send-rule stream 0660 system system
     group root
 
-service time_daemon /system/bin/time_daemon
+service time_daemon /system/vendor/bin/time_daemon
     class late_start
     user root
     group root
@@ -842,7 +842,7 @@ service per_mgr /system/vendor/bin/pm-service
     user system
     group system net_raw
 
-service per_proxy /system/bin/pm-proxy
+service per_proxy /system/vendor/bin/pm-proxy
     class core
     user system
     group system
