land: fix this derp x_x omg
Change-Id: I0b0a6efec1d3cd0cba06defb62307c3070bdeea0
Signed-off-by: klozz <klozz707@gmail.com>

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -653,11 +653,7 @@ service fingerprintd /system/bin/fingerprintd
     system system
     disabled
 
-<<<<<<< HEAD
-service biometric_hal /vendor/bin/hw/android.hardware.biometrics.fingerprint@2.1-service
-=======
 service fps_hal /vendor/bin/hw/android.hardware.biometrics.fingerprint@2.0-service-custom
->>>>>>> a1c5505... land: Add custom biometrics to fox goodix fpsensor
     # "class hal" causes a race condition on some devices due to files created
     # in /data. As a workaround, postpone startup until later in boot once
     # /data is mounted.
@@ -678,7 +674,7 @@ on property:persist.sys.fp.vendor=switchf
     stop gx_fpd
     setprop persist.sys.fp.vendor searchf
     start fingerprintd
-    start biometric_hal
+    start fps_hal
     setprop ro.boot.fpsensor fpc
     setprop ro.hardware.fingerprint searchf
     setprop persist.sys.fp.onstart=1
@@ -693,7 +689,7 @@ on property:persist.sys.fp.onstart=0
 
 on property:persist.sys.fp.onstart=1
    start fingerprintd
-   start biometric_hal
+   start fps_hal
 
 # Start camera server as daemon
 service qcamerasvr /system/bin/mm-qcamera-daemon
