--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -38,7 +38,7 @@ on early-init
     chmod 0755 /sys/kernel/debug
 
 on init
-    export LD_SHIM_LIBS "/system/vendor/lib64/lib-imsvt.so|libshims_ims.so:/system/vendor/lib64/libizat_core.so|libshims_get_process_name.so:/system/vendor/lib64/libril-qc-qmi-1.so|rild_socket.so"
+#    export LD_SHIM_LIBS "/system/vendor/lib64/lib-imsvt.so|libshims_ims.so:/system/vendor/lib64/libizat_core.so|libshims_get_process_name.so:/system/vendor/lib64/libril-qc-qmi-1.so|rild_socket.so"
 
     # Set permissions for persist partition
     mkdir /persist 0771 root system
@@ -673,7 +673,6 @@ service gx_fpd /system/bin/gx_fpd
 on property:persist.sys.fp.vendor=switchf
     stop gx_fpd
     setprop persist.sys.fp.vendor searchf
-    start fingerprintd
     start biometric_hal
     setprop ro.boot.fpsensor fpc
 
@@ -692,7 +691,6 @@ on property:persist.sys.fp.onstart=0
    start gx_fpd
 
 on property:persist.sys.fp.onstart=1
-   start fingerprintd
    start biometric_hal
 
 on property:ro.boot.fpsensor=gdx
