--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -231,9 +231,9 @@ on post-fs-data
     # qti-logkit data
     mkdir /data/misc/qti-logkit/ 0771 system system
     mkdir /data/misc/qti-logkit/shared-privileged/ 2770 system system
-    mkdir /data/misc/qti-logkit/shared-public/ 2770 system diag
+    mkdir /data/misc/qti-logkit/shared-public/ 2770 system oem_2950
     mkdir /data/misc/qti-logkit/socket-privileged/ 2770 system system
-    mkdir /data/misc/qti-logkit/socket-public/ 2750 system diag
+    mkdir /data/misc/qti-logkit/socket-public/ 2750 system oem_2950
     mkdir /data/misc/qti-logkit/logdata/ 2750 system shell
 
     # Sensors
@@ -450,7 +450,7 @@ service iop /system/bin/iop
 service qcomsysd /system/bin/qcom-system-daemon
     class main
     user root
-    group root diag
+    group root oem_2950
 
 on property:sys.boot_completed=1
     write /dev/kmsg "Boot completed "
@@ -526,7 +526,7 @@ service netmgrd /system/bin/netmgrd
 service qti /system/vendor/bin/qti
     class main
     user radio
-    group radio net_raw diag usb net_admin
+    group radio net_raw oem_2950 usb net_admin
 #    writepid /dev/cpuset/system-background/tasks
 
 service sensors /system/vendor/bin/sensors.qcom
@@ -559,7 +559,7 @@ service wpa_supplicant /system/vendor/bin/hw/wpa_supplicant \
 service loc_launcher /system/bin/loc_launcher
     #loc_launcher will start as root and set its uid to gps
     class late_start
-    group gps inet qcom_diag wifi
+    group gps inet oem_2950 wifi
 
 service qcom-sh /system/bin/sh /init.qcom.sh
     class late_start
@@ -571,7 +571,7 @@ service ril-daemon1 /vendor/bin/hw/rild -c 2
     socket rild2 stream 660 root radio
     socket rild-debug2 stream 660 radio system
     user radio
-    group radio cache inet misc audio sdcard_r sdcard_rw diag qcom_diag log
+    group radio cache inet misc audio sdcard_r sdcard_rw oem_2950 log
     capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
 service usb_uicc_enable /system/bin/sh /system/etc/init.qcom.uicc.sh
@@ -756,7 +756,7 @@ service imsqmidaemon /system/vendor/bin/imsqmidaemon
     class main
     user system
     socket ims_qmid stream 0660 system radio
-    group radio log diag
+    group radio log oem_2950
     disabled
 
 on property:service.qti.ims.enabled=1
@@ -766,7 +766,7 @@ service imsdatadaemon /system/vendor/bin/imsdatadaemon
     class main
     user system
     socket ims_datad stream 0660 system radio
-    group system wifi radio inet log diag
+    group system wifi radio inet log oem_2950
     disabled
 
 on property:sys.ims.QMI_DAEMON_STATUS=1
@@ -779,13 +779,13 @@ service ims_rtp_daemon /system/vendor/bin/ims_rtp_daemon
     class main
     user system
     socket ims_rtpd stream 0660 system radio
-    group radio diag inet log
+    group radio oem_2950 inet log
     disabled
 
 service imscmservice /system/vendor/bin/imscmservice
     class main
     user system
-    group radio diag inet log
+    group radio oem_2950 inet log
     disabled
 
 on property:sys.ims.DATA_DAEMON_STATUS=1
