--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -73,7 +73,7 @@ on fs
 
 on post-fs
     start qseecomd
-    swapon_all vendor/etc/fstab.qcom
+    swapon_all /vendor/etc/fstab.qcom
     write /proc/sys/vm/page-cluster 0
     write /proc/sys/vm/swappiness 100
     start qseecomd
